# SEDE-Optimizer

./: .gitignore  Analyze_data.py  CITATION.cff  Dockerfile  EGO.py  EGO_Psuducode.txt  Final_Transition.py  LICENSE  Package_Zenodo.sh  QuickTest.py  README.md  RealWorldBench.py  SEDE.py  Speed_Gap_Test.py  Test.py  Visualize_3D.py  Visualize_Paper.py  main.tex  pyproject.toml  ranks_table.tex  requirements.txt  results_table.tex  runner.py  setup.py  test_sede.py
Results/: Ackley.csv  Ackley_100D.csv  Ackley_30D.csv  Ackley_50D.csv  Elliptic.csv  Elliptic_100D.csv  Elliptic_30D.csv  Elliptic_50D.csv  FletcherPowell.csv  FletcherPowell_100D.csv  FletcherPowell_30D.csv  FletcherPowell_50D.csv  Griewank.csv  Griewank_100D.csv  Griewank_30D.csv  Griewank_50D.csv  Levy.csv  Levy_100D.csv  Levy_30D.csv  Levy_50D.csv  Michalewicz.csv  Michalewicz_100D.csv  Michalewicz_30D.csv  Michalewicz_50D.csv  NoisyQuartic.csv  NoisyQuartic_100D.csv  NoisyQuartic_30D.csv  NoisyQuartic_50D.csv  Rastrigin.csv  Rastrigin_100D.csv  Rastrigin_30D.csv  Rastrigin_50D.csv  Rosenbrock.csv  Rosenbrock_100D.csv  Rosenbrock_30D.csv  Rosenbrock_50D.csv  SchafferF6.csv  SchafferF6_2D.csv  Schwefel.csv  Schwefel_100D.csv  (+16 more)
benchmarks/: Final_Transition.py  QuickTest.py  RealWorldBench.py  Speed_Gap_Test.py  Test.py  test_sede.py
docs/: main.tex
src/: sede_core.cpp
utils/: Analyze_data.py  Visualize_3D.py  Visualize_Paper.py
